syntax = "proto3";
package ptproto;
option go_package = "/dtproto";

service TestService {
  rpc TestBidi (stream TestRequest) returns (stream TestResponse){};
  rpc TestServerStream (TestRequest) returns (stream TestResponse){};
  rpc TestClientStream (stream TestRequest) returns (TestResponse){};
  rpc TestUnary (TestRequest) returns (TestResponse);
}

message TestRequest {
  string action = 1;
  string data = 2;
}

message TestResponse {
  int32 code = 1;
  string result = 2;
}

message TestData {
  string username = 1;
  string email = 2;
}